[package]
name = "async-request-dispatcher"
version = "0.1.0"
description = "Async request dispatcher with scheduling, affinity, and metrics."
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.99"
dashmap = "6.1.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.14.1", features = ["tls-native-roots"] }

[[example]]
name = "gcp-genai-api"
path = "examples/gcp_genai_api.rs"

[dev-dependencies]
thiserror = "2.0.16"
axum = "0.8.4"
env_logger = "0.11.8"
google-cloud-auth = "0.22.4"
http = "1.3.1"
prost = "0.14.1"
tonic-prost = "0.14.1"
prost-wkt-types = "0.7.0"

[build-dependencies]
tonic-prost-build = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
glob = "0.3.3"
