[package]
name = "async-request-dispatcher"
version = "0.1.0"
description = "Async request dispatcher with scheduling, affinity, and metrics."
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.99"
dashmap = "6.1.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "gcp-genai-api"
path = "examples/gcp_genai_api.rs"

[dev-dependencies]
serde_json = "1.0.138"
thiserror = "2.0.16"
axum = "0.8.4"
env_logger = "0.11.8"
google-cloud-auth = "1.4.0"
http = "1.3.1"
google-cloud-aiplatform-v1 = { version = "1.5.0", default-features = false, features = ["prediction-service"] }
google-cloud-gax = "1.6.0"
